# glsl-pathtracing

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  spec.md
cmake/: shader.cmake  vulkan.cmake
res/: display.frag.glsl  display.vert.glsl  input-attachment.frag.glsl  trace.comp.glsl
shader/: rt.frag.glsl
shaders/: screen.frag.glsl  trace.comp.glsl
src/: app.cpp  app.h  bvh.cpp  bvh.h  camera.cpp  camera.h  device.cpp  device.h  main.cpp  render.cpp  render.h  scene.cpp  scene.h  trace.cpp  trace.h  util.cpp  util.h  vkut.cpp  vkut.h  window.cpp  window.h
src/vkut/: common.cpp  common.h  instance.cpp  instance.h
